# shcli

./: .gitignore  README.md  pyproject.toml  requirements.txt
shcli/: cli.py
shcli/auth/: login_model.py  user_auth.py
shcli/catalog/: catalog.py
shcli/process/: process.py  query_builder.py
shcli/utils/: file_utils.py  utils.py
tests/: test_auth.py  test_catalog.py  test_query_builder.py  test_utils.py
