[build-system]
requires = ["setuptools>=65.5.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "shcli"
version = "0.1.0"
description = "A CLI tool to query the Sentinel Hub Catalog and Process APIs for satellite imagery and meta data."
readme = "README.md"
authors = [{ name = "Bismark Ade", email = "bismarkade@gmail.com" }]
dependencies = [
    "annotated-types >= 0.7.0",
    "certifi >= 2024.8.30",
    "charset-normalizer >= 3.4.0",
    "click >= 8.1.7",
    "colorama >= 0.4.6",
    "idna >= 3.10",
    "iniconfig >= 2.0.0",
    "numpy >= 2.1.3",
    "oauthlib >= 3.2.2",
    "packaging >= 24.2",
    "pluggy >= 1.5.0",
    "pydantic >= 2.9.2",
    "pydantic_core >= 2.23.4",
    "pytest >= 8.3.3",
    "requests >= 2.32.3",
    "requests-oauthlib >= 2.0.0",
    "shapely >= 2.0.6",
    "typing_extensions >= 4.12.2",
    "urllib3 >= 2.2.3",
]

[project.scripts]
shcli = "shcli.cli:cli"